[package]
name = "rsb_test"
version = "0.1.0"
authors = ["Abdulla Abdurakhmanov <me@abdolence.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Tests for macros implementation"
homepage = "https://github.com/abdolence/rust-value-builder"
repository = "https://github.com/abdolence/rust-value-builder"
documentation = "https://github.com/abdolence/rust-value-builder"
keywords = ["value", "class"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE"]
publish = false

[dependencies]
rsb_derive = { version = "0.2", path = "../rsb_derive"}


